# dask-labextension

./: .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.cfg  setup.py  tsconfig.eslint.json  tslint.json  versioneer.py
.github/workflows/: build.yml  labextension.yml  pre-commit.yml  python.yaml
ci/: base_install.sh  install.sh  pytest.sh
ci/javascript/: install.sh  test.sh
ci/python/: install.sh  test.sh
dask_labextension/: __init__.py  _version.py  clusterhandler.py  config.py  dashboardhandler.py  handler.py  handlers.py  labextension.yaml  manager.py
dask_labextension/tests/: test_basic.py  test_manager.py
jupyter-config/: dask_labextension.json
jupyter-config/jupyter_notebook_config.d/: dask_labextension.json
schema/: plugin.json
scripts/: buildExtension.js  build_extension.js
src/: clusters.tsx  dashboard.tsx  handler.ts  index.ts  plugin.ts  scaling.tsx  sidebar.ts  sidebar.tsx  svg.d.ts  typings.d.ts  widget.ts  widget.tsx
style/: index.css
test/: test_dummy.js
typings/bokeh/: bokeh.d.ts
